--- a/clientSide/MoodBasedPlaylist/src/App.css
+++ b/clientSide/MoodBasedPlaylist/src/App.css
@@ -1,42 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+*{
+  margin:0;
+  padding: 0;
+}
+
+.HomePage{
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("assets/bgImg.jpg");
+
+  height: 100vh;
+  background-size: cover;
+  width: 100vw;
+  background-position: center;
+}
+
+.HomePage h1{
+  color: white;
+  font-family: roboto;
+  font-size: 80px;
+  position: absolute;
+  top: 40%;
+  left: 30%;
+}
+
+.demo{
+  padding-top: 120px;
+  height: 100vh;
+  width: 100vw;
+  background-color: #222222;
+  
+}
+
+.demo .grid{
+  display: grid;
+  grid-template-rows: repeat(2,1fr);
+  grid-template-columns: repeat(5,1fr);
+  gap: 20px;
+  place-items: center;
+}
+
+.demo .heading{
+  font-size: 60px;
+  font-family: roboto;
+  color: white;
   text-align: center;
-}
+};
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
